# pkg/api/v1/schema_swagger_generated.go
@@ -424,9 +424,10 @@ func (DHCPOptions) SwaggerDoc() map[string]string {
 
 func (DHCPPrivateOptions) SwaggerDoc() map[string]string {
 	return map[string]string{
-		"":       "DHCPExtraOptions defines Extra DHCP options for a VM.",
-		"option": "Option is an Integer value from 224-254\nRequired.",
-		"value":  "Value is a String value for the Option provided\nRequired.",
+		"":         "DHCPExtraOptions defines Extra DHCP options for a VM.",
+		"option":   "Option is an Integer value from 224-254\nRequired.",
+		"value":    "Value is a String value for the Option provided\nRequired.",
+		"encoding": "Encoding specifies how value should be interpreted.\nOne of: plaintext (default), base64\n+optional",
 	}
 }
 
